--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@headlessui/react": "^0.3.1",
     "@loadable/component": "^5.14.1",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.13.1",
@@ -63,6 +62,7 @@
     "react-redux": "^7.2.1",
     "react-resize-detector": "^6.6.1",
     "react-scripts": "^4.0.3",
+    "react-stripe-script-loader": "^1.1.1",
     "react-tooltip": "^4.2.9",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
