--- a/frontend/package.json
+++ b/frontend/package.json
@@ -76,6 +76,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.13.8",
+    "@babel/preset-react": "^7.12.13",
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
@@ -91,13 +92,6 @@
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-react-require": "^3.1.3",
-    "eslint": "^7.21.0",
-    "eslint-import-resolver-babel-module": "^5.2.0",
-    "eslint-plugin-better-styled-components": "^1.1.2",
-    "eslint-plugin-import": "^2.22.1",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.21.5",
-    "eslint-plugin-react-hooks": "^4.2.0",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.6",
     "react-is": "^17.0.1",
