--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
+    "@headlessui/react": "^0.3.1",
     "@loadable/component": "^5.14.1",
     "@stripe/react-stripe-js": "^1.1.2",
     "@stripe/stripe-js": "^1.13.1",
@@ -29,12 +30,10 @@
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/typography": "^0.4.0",
-    "@tailwindui/react": "^0.1.1",
     "apexcharts": "^3.22.0",
     "axios": "^0.21.1",
     "bytes": "^3.1.0",
     "concurrently": "^6.0.0",
-    "core-js": "^3.9.1",
     "formik": "^2.2.0",
     "js-cookie": "^2.2.1",
     "logrocket": "^1.0.12",
@@ -43,10 +42,11 @@
     "next": "^10.0.7",
     "next-seo": "^4.17.0",
     "node-fetch": "^2.6.1",
+    "nprogress": "^0.2.0",
     "postcss-import": "^14.0.0",
     "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
-    "rc-pagination": "^3.1.3",
+    "rc-pagination": "^3.1.6",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.7",
     "react-copy-to-clipboard": "^5.0.2",
@@ -56,33 +56,33 @@
     "react-imask": "^6.0.5",
     "react-loading-skeleton": "^2.1.1",
     "react-moment": "^1.1.1",
-    "react-password-strength-bar": "^0.3.2",
+    "react-password-strength-bar": "^0.3.3",
     "react-player": "^2.6.2",
     "react-redux": "^7.2.1",
-    "react-resize-detector": "^6.6.1",
+    "react-resize-detector": "^6.6.3",
     "react-scripts": "^4.0.3",
     "react-stripe-script-loader": "^1.1.1",
     "react-tooltip": "^4.2.9",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
-    "redux-devtools-extension": "^2.13.8",
-    "stripe": "^8.115.0",
+    "redux-devtools-extension": "^2.13.9",
+    "stripe": "^8.138.0",
     "styled-components": "^5.2.0",
     "styled-jsx-plugin-postcss": "^4.0.1",
-    "swr": "^0.4.2",
+    "swr": "^0.5.3",
     "url-parse": "^1.4.7",
     "window": "^4.2.7",
     "yup": "^0.32.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.8",
+    "@babel/core": "^7.13.10",
     "@babel/preset-react": "^7.12.13",
     "@storybook/addon-actions": "^6.1.11",
     "@storybook/addon-essentials": "^6.1.11",
     "@storybook/addon-links": "^6.1.11",
     "@storybook/cli": "^6.1.11",
     "@storybook/node-logger": "^6.1.11",
-    "@storybook/preset-create-react-app": "^3.1.5",
+    "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.1.11",
     "autoprefixer": "^10.2.4",
     "babel-eslint": "^10.1.0",
@@ -93,7 +93,7 @@
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-react-require": "^3.1.3",
     "node-sass": "^5.0.0",
-    "postcss": "^8.2.6",
+    "postcss": "^8.2.8",
     "react-is": "^17.0.1",
     "styled-jsx-plugin-sass": "^1.0.0",
     "tailwindcss": "^2.0.3",
