--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,8 +24,6 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@headlessui/react": "^0.3.1",
     "@loadable/component": "^5.14.1",
-    "@stripe/react-stripe-js": "^1.1.2",
-    "@stripe/stripe-js": "^1.13.1",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/line-clamp": "^0.2.0",
@@ -36,6 +34,7 @@
     "concurrently": "^6.0.0",
     "formik": "^2.2.0",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "logrocket": "^1.0.12",
     "logrocket-react": "^4.0.1",
     "moment": "^2.29.1",
