--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,8 @@
     "formik": "^2.2.0",
     "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
+    "logrocket": "^1.0.14",
+    "logrocket-react": "^4.0.1",
     "moment": "^2.29.1",
     "next": "^10.0.7",
     "next-seo": "^4.17.0",
