--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@headlessui/react": "^0.3.1",
     "@loadable/component": "^5.14.1",
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.2",
     "@tailwindcss/aspect-ratio": "^0.2.0",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/line-clamp": "^0.2.0",
@@ -60,12 +62,10 @@
     "react-redux": "^7.2.1",
     "react-resize-detector": "^6.6.3",
     "react-scripts": "^4.0.3",
-    "react-stripe-script-loader": "^1.1.1",
     "react-tooltip": "^4.2.9",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
-    "stripe": "^8.138.0",
     "styled-components": "^5.2.0",
     "styled-jsx-plugin-postcss": "^4.0.1",
     "swr": "^0.5.3",
