--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,8 +1,9 @@
 {
-	"singleQuote": true,
+	"singleQuote": false,
 	"trailingComma": "none",
 	"useTabs": true,
+	"tabWidth": 2,
 	"quoteProps": "consistent",
 	"proseWrap": "never",
-	"jsxSingleQuote": true
+	"printWidth": 120
 }
