--- a/frontend/public/labels/pages/site/settings.json
+++ b/frontend/public/labels/pages/site/settings.json
@@ -6,16 +6,17 @@
 		"label": "Site Settings"
 	},
 	{
-		"label": "Site Information"
+		"label": "Site Information",
+		"description": "User generated content in real-time will have multiple touchpoints for offshoring."
 	},
 	{
 		"label": "User generated content in real-time will have multiple touchpoints for offshoring."
 	},
 	{
-		"label": "New Site Name"
+		"label": "Site Name"
 	},
 	{
-		"label": "New Site URL Link"
+		"label": "Site URL Link"
 	},
 	{
 		"label": "Update"
@@ -24,7 +25,7 @@
 		"label": "Cancel"
 	},
 	{
-		"label": "Save"
+		"label": "Save Changes"
 	},
 	{
 		"label": "Delete Site"
@@ -40,5 +41,32 @@
 	},
 	{
 		"label": "Cancel"
+	},
+	{
+		"label": "An unexpected error occurred. Please try again."
+	},
+	{
+		"label": "Site information updated successfully"
+	},
+	{
+		"label": "Site information update failed. Please try again"
+	},
+	{
+		"label": "Form Submission Failed"
+	},
+	{
+		"label": "Form Submission Success"
+	},
+	{
+		"label": "Saving..."
+	},
+	{
+		"label": "Required field"
+	},
+	{
+		"label": "Too short!"
+	},
+	{
+		"label": "Too long!"
 	}
 ]
